--- a/src/app/pages/admin-login/admin-login.page.html
+++ b/src/app/pages/admin-login/admin-login.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>admin-login</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-
+<ion-row>
+  <ion-col>
+    <img class="sp-img"  src="/assets/icons/bus.png" alt="yenkor" />
+  </ion-col>
+  <ion-col class="content-style container">
+    <form action="login.php" [formGroup]="form" (submit)="submit($event)" >
+    <ion-label>Phone Number</ion-label>
+    <ion-input type="tel" inputmode="tel" name="phoneNumber" formControlName="phoneNumber"></ion-input>
+    <ion-label>PIN</ion-label>
+    <ion-input name="pin" formControlName="pin" type="password"></ion-input>
+    <ion-button color="success" class="mt-3" expand="block" type="submit"> LOGIN</ion-button>
+    </form>
+  </ion-col>
+</ion-row>
 </ion-content>
